[package]
name = "perlin_image"
version = "0.1.0"
authors = ["math132d <majohha@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
image = "0.22.4"

[dependencies.rust_perlin]
git = "https://github.com/math132d/rust_perlin"